--- a/template/index.html
+++ b/template/index.html
@@ -25,6 +25,16 @@
 				<h3 class="book-title"><a href={{ book.url }}>{{ book.title }}</a></h3>
 				<span class="book-author">by {{ book.author }}</span>
 				<span class="book-date">in {{ book.date }}</span>
+                {% if book.reviews %}
+                    <ul class="reviews">
+                        {% for review in book.reviews %}
+                            <li class="review">
+                                <a class="review-title" href={{ review.url }}>{{ review.title }}</a>
+                                <p class="review-brief">{{ review.brief }}</p>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
 				<ul>
 					<li class="tag">{{ book.tag }}</li>
 				</ul>
