--- a/template/index.html
+++ b/template/index.html
@@ -16,6 +16,11 @@
 				<option value="content">content</option>
 				<option value="author">author</option>
 			</select>
+            <span>language</span>
+			<select name="lan">
+				<option value="en">English</option>
+				<option value="cn">中文</option>
+			</select>
 			<input type="submit" value="Submit">
 		</div>
 	</form>
